# symbiosis

./: .gitignore  .travis.yml  Cargo.toml  README.md
core/: Cargo.toml
core/src/: codegen.rs  content_type.rs  lib.rs  parser.rs  slicer.rs
core/tests/: html.rs
dynamic/: Cargo.toml
dynamic/src/: lib.rs
example/: .gitignore  Cargo.toml  build.rs
example/res/: main.css  main.js
example/src/: macros.rs  main.rs  names.rs  templates.rs
example/templates/: Document.html
example/templates/html/: ImgBox.html
example/templates/shared/: Card.html  MoreInfo.html
pattern/: Cargo.toml
pattern/src/: lib.rs
render_tests/: .gitignore  Cargo.toml  build.rs  run.sh
render_tests/src/: main.rs  templates.rs
render_tests/tests/collections/: expected.html  template.html  values.json
render_tests/tests/optional_placeholder/: expected.html  template.html  values.json
render_tests/tests/placeholder/: template.html  values.json
render_tests/tests/structs/: expected.html  template.html  values.json
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: id_rsa.enc  travis-doc-upload.cfg
src/: codegen.rs  fragments.rs  javascript.rs  lib.rs  parser.rs  rust.rs
src/fragment/: mod.rs  pattern.rs
src/rust/: mod.rs  types.rs
static/: Cargo.toml
static/src/: lib.rs
tokenizer/: Cargo.toml  build.rs
tokenizer/src/: codegen.rs  fragment.rs  lib.rs  parser.rs
tokenizer/src/codegen/: content_type.rs  mod.rs  path.rs
tokenizer/src/fragment/: generated.rs  mod.rs  pattern.rs
tokenizer/src/parser/: grammar.lalrpop  mod.rs  slicer.rs
tokenizer/tests/: html.rs
(+6 files in other folders)
