[package]

name = "example"
version = "0.0.0"
authors = ["Erik Hedvall <hello@erikhedvall.nu>"]
build = "build.rs"

[dependencies]
rand = "*"
rustc-serialize = "*"

[dependencies.rustful]
git = "https://github.com/Ogeon/rustful"

[dependencies.symbiosis-rust]
path = "../rust"

[build-dependencies.symbiosis]
path = ".."
